--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,5 @@
     <h1>This is my home page</h1>
     <span>Woooo!</span>
     <h2>I am level 2 header</h2>
+    <button class="btn btn-primary">A button</button>
 </div>
