--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,3 @@
-<div>
-    <h1>This is my home page</h1>
-    <span>Woooo!</span>
-    <h2>I am level 2 header</h2>
-    <button class="btn btn-primary">A button</button>
-</div>
+<app-page-container>
+    <router-outlet></router-outlet>
+</app-page-container>
