--- a/src/app/page-content/mathematics/mathematics-home.component.html
+++ b/src/app/page-content/mathematics/mathematics-home.component.html
@@ -1,1 +1,7 @@
 <p>mathematics-home works!</p>
+<textarea [(ngModel)]="mathml" name="mathml" id="mathml" cols="30" rows="20" placeholder="paste your mathml expression here"></textarea>
+<p>---</p>
+<p *ngIf="mathml; else noExpression" [appMath]="mathml"> </p>
+<ng-template #noExpression><div class="no-expression">Expression Unavailable</div></ng-template>
+<span [appMath]="mathExpression1"></span>
+<p>Done!</p>
