mathjax from cdn working

--- a/src/app/page-content/mathematics/mathematics-home.component.html
+++ b/src/app/page-content/mathematics/mathematics-home.component.html
@@ -1,3 +1,7 @@
+<div>
+    <h1>Hello</h1>
+</div>
+
 <p>mathematics-home works!</p>
 <textarea [(ngModel)]="mathml" name="mathml" id="mathml" cols="30" rows="20" placeholder="paste your mathml expression here"></textarea>
 <p>---</p>
