--- a/src/app/page-container/page-container.component.html
+++ b/src/app/page-container/page-container.component.html
@@ -20,7 +20,10 @@
         </ul>
     </div>
 </nav>
-<div class="d-flex ">
-
+<div class="d-flex flex-row">
+    <div class="col-2"></div>
+    <div class="col-8 mt-5">
+        <ng-content></ng-content>
+    </div>
+    <div class="col-2"></div>
 </div>
-<ng-content></ng-content>
