--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,11 @@
 
 /* Importing Bootstrap SCSS file. */
 @import '~bootstrap/scss/bootstrap';
+
+mjx-container {
+    margin: 0 !important;
+}
+
+.c-cursor-pointer {
+    cursor: pointer;
+}
